# doable

./: .gitignore  Doable_Presentation.pptx  README.md  components.json  index.html  instrumentation.ts  next.config.ts  package-lock.json  package.json  tsconfig.json  xmcp.config.ts
.agent/rules/: next-forms.md  react-animations.md  react-components.md  react-table.md  supabase.md
api/: index.py  mcp_server.py  my_os.db  pyproject.toml
app/: globals.css  layout.tsx  page.tsx
app/actions/: employees.ts  integrations.ts  projects.ts  psychology.ts  tasks.ts  users.ts
app/dashboard/: layout.tsx  page.tsx
app/employees/: columns.tsx  employee-dialog.tsx  page.tsx
app/integrations/: columns.tsx  integration-dialog.tsx  page.tsx
app/projects/: columns.tsx  page.tsx  project-dialog.tsx
app/tasks/: columns.tsx  page.tsx  task-dialog.tsx  task-list.tsx  task-quick-add.tsx
app/users/: columns.tsx  page.tsx  user-dialog.tsx
components/: app-sidebar.tsx  data-table.tsx  nav.tsx
components/ai/: chat-interface.tsx  voice-input.tsx
components/dashboard/: motivational-nudge.tsx
components/forms/: task-form.tsx  (+4 more)
docs/: ARCHITECTURE.md  LANGFUSE_IMPLEMENTATION_SUMMARY.md  LANGFUSE_INTEGRATION.md  LANGFUSE_QUICK_REFERENCE.md  README.md  agno-integration.md  agno.md  core-features.md  data-management.md  db-structure.md  development.md  mcp-features.md  overview.md  problem-statement.md  project-todo-list.md  slides.md  slides_prompt.md  user-interface.md
lib/: langfuse.ts  task-parser.ts
tools/: create_task.ts  generate_presentation.py  hello.ts  list_tasks.ts
(+47 files in other folders)
